# MapReduce-rs

./: .gitignore  Cargo.toml  Makefile  README.md
base/: Cargo.toml  README.md
base/src/: lib.rs
core-base/: Cargo.toml
core-distributed/: Cargo.toml  build.rs
core-distributed/proto/: message.proto
core-sequential/: Cargo.toml
core-sequential/src/: main.rs
plugin-wc/: Cargo.toml
plugin-wc/src/: lib.rs
sequential/: Cargo.toml
sequential/src/: main.rs
