[package]
name = "core-distributed"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"



[dependencies]
# RPC
prost = "0.11.0"
tonic = "0.8.0"
tokio = { version = "1.20.1", features = ["full"] }

# log
log = "0.4.0"
env_logger = "0.9.0"

# Command Line
structopt = "0.3.22"

# Other
uuid = { version = "1.1.2", features = ["v4"] }
dashmap = "5.4.0"
crossbeam-queue = "0.3.6"
# tracing = "0.1.36"
# tracing-subscriber = "0.3.15"

[dependencies.core-base]
path="../core-base"

[build-dependencies]
tonic-build = "0.8.0"
